[gd_scene load_steps=4 format=2]

[ext_resource path="res://Themes & Styles/Dark Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/LayerContainer.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/Layers/layer_visible.png" type="Texture" id=3]


[node name="LayerContainer" type="Button"]
margin_right = 160.0
margin_bottom = 42.0
rect_min_size = Vector2( 160, 42 )
theme = ExtResource( 1 )
toggle_mode = true
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="VisibilityButton" type="TextureButton" parent="."]
margin_left = 6.0
margin_top = 5.0
margin_right = 38.0
margin_bottom = 37.0
hint_tooltip = "LAYERVISIBILITY_HT"
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -16.0
margin_right = 41.0
margin_bottom = 16.0
mouse_default_cursor_shape = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 4
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 36.0
margin_top = 8.0
margin_right = 75.0
margin_bottom = 23.0
text = "Layer 0"
align = 1

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
visible = false
margin_left = 86.0
margin_top = 5.0
margin_right = 166.0
margin_bottom = 37.0
rect_min_size = Vector2( 80, 32 )
size_flags_vertical = 4
text = "Layer 0"
editable = false
caret_blink = true
caret_blink_speed = 0.5
[connection signal="pressed" from="." to="." method="_on_LayerContainer_pressed"]
[connection signal="pressed" from="VisibilityButton" to="." method="_on_VisibilityButton_pressed"]
[connection signal="text_changed" from="HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
